applications/miniflux/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - image: docker.io/miniflux/miniflux:2.3.3
          name: miniflux
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 10
