applications/miniflux/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress
  annotations:
    haproxy.org/ssl-certificate: haproxy-controller/ggrel-net-certificate

spec:
  ingressClassName: haproxy
  rules:
    - host: miniflux.ggrel.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 8080
