applications/miniflux/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: miniflux
spec:
  podSelector:
    matchLabels:
      app: default
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: haproxy-ingress
              app.kubernetes.io/name: kubernetes-ingress
      ports:
        - port: 8080
          protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: default
      ports:
        - port: 5432
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: postgresql
      ports:
        - port: 5432
          protocol: TCP
        - port: 8000
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - port: 5432
          protocol: TCP
        - port: 8000
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: miniflux-egress
spec:
  endpointSelector:
    matchLabels:
      k8s:app: default
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: miniflux
            k8s:cnpg.io/cluster: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: haproxy-controller
            k8s:app.kubernetes.io/instance: haproxy-ingress
            k8s:app.kubernetes.io/name: kubernetes-ingress
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgresql-egress
spec:
  endpointSelector:
    matchLabels:
      k8s:cnpg.io/cluster: postgresql
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: miniflux
            k8s:cnpg.io/cluster: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
